Fix: spinner not showing up correctly

--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   animation: fadeIn ease 1s;
+  z-index: 100;
 
   svg {
     animation: SlideDown ease-in-out 0.8s;
